# syncthing_but_like_for_music

./: README.md  pubspec.yaml  syncplay.code-workspace
_fs_sync/: mgmt.rs  mod.rs  net.rs
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  routing.dart
lib/models/: app_state.dart
lib/routes/: home.dart  player.dart  route_test.dart  routes.dart  search.dart  setup.dart
lib/routes/settings/: settings.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/widgets/: album_card.dart  artist_card.dart  item_card.dart  item_list.dart  song_card.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: media.rs  mod.rs  sync_engine.rs
rust/src/backend/: fs_glue.rs  ledger.rs  mgmt.rs  mod.rs  net.rs  sync.rs
rust/src/fs_sync/: mgmt.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_syncthing_but_like_for_music.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_syncthing_but_like_for_music.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
