[package]
name = "rust_lib_syncthing_but_like_for_music"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
flutter_rust_bridge = "=2.11.1"
iroh = "0.91.1"
iroh-blobs = "0.93.0"
iroh-docs = "0.91.0"
iroh-gossip = "0.91.0"
tokio = "1.47.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
